--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
   <nav id="navbar1" class="navbar pt-3 pb-3 navbar-expand-md">
     <div class="container">
-      <img src="./Images/mentorkart3.png" style="width: 100px;" class="d-md-none d-sm-none d-none d-lg-flex" alt="">
-      <img src="./Images/mentorWhite.png" class="d-md-flex d-lg-none" style="width: 100px;" alt="">
+      <img src="./Images/mentorkart3.png" style="width: 100px;" class="" alt="">
+      <!-- <img src="./Images/mentorWhite.png" class="d-md-flex d-lg-none" style="width: 100px;" alt=""> -->
       <!-- <button class="navbar-toggler bg-white toggler-example" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
         aria-label="Toggle navigation"><span class="dark-blue-text">
@@ -94,10 +94,11 @@
             justify-content-around
           ">
         <div>
-          <h1 class="w-100 banner-inner-main-text" style="font-weight: 500; font-size: 45px;">
-            MentorKart's Premium MemberShip for all your Career needs
+          <h1 class="w-100 text-dark banner-inner-main-text" style="font-weight: 500; font-size: 45px;">
+            MentorKart's Premium MemberShip for<span class="span-color">all your Career needs</span>
           </h1>
-          <p>One membership,for many job opportunites</p>
+          <p style="background: #FFB7B7;border-radius: 20px;color: #FF7070; padding: 5px 14px; width:fit-content;"
+            class="remove-bg">One membership,for many job opportunites</p>
         </div>
         <div>
           <div class="
@@ -120,10 +121,10 @@
               <p>Ajob Profile</p>
             </div>
           </div>
-          <p class="banner-btn">
-            Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">299 only</span>
+          <p class="banner-btn text-white" style="background: #FF7070;">
+            Get it for<span class="ml-2 mr-2 text-white font-weight-bolder">299 only</span>
             with
-            <span class="text-dark font-weight-bolder ml-1">3months access</span>
+            <span class="text-white font-weight-bolder ml-1">3months access</span>
           </p>
         </div>
       </div>
@@ -140,8 +141,8 @@
       <div class="accordion" id="faq">
         <div class="card">
           <div class="card-header" id="faqhead1">
-            <a href="#" class="btn btn-header-link" data-toggle="collapse" data-target="#faq1" aria-expanded="true"
-              aria-controls="faq1">Want
+            <a href="#" class="btn btn-header-link d-flex flex-row justify-content-between align-items-center"
+              data-toggle="collapse" data-target="#faq1" aria-expanded="true" aria-controls="faq1">Want
               to become full stack developer in MERN <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq1" class="collapse mt-2 show" aria-labelledby="faqhead1" data-parent="#faq">
@@ -156,8 +157,10 @@
         </div>
         <div class="card">
           <div class="card-header" id="faqhead2">
-            <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq2"
-              aria-expanded="true" aria-controls="faq2">Want to become Product Manager <i class="fas fa-chevron-right ml-4"></i></a>
+            <a href="#"
+              class="btn btn-header-link collapsed  d-flex flex-row justify-content-between align-items-center"
+              data-toggle="collapse" data-target="#faq2" aria-expanded="true" aria-controls="faq2">Want to become
+              Product Manager <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq2" class="collapse mt-2" aria-labelledby="faqhead2" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
@@ -170,23 +173,28 @@
         </div>
         <div class="card">
           <div class="card-header" id="faqhead3">
-            <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq3"
-              aria-expanded="true" aria-controls="faq3">Want to become Data Science Engineer <i class="fas fa-chevron-right ml-4"></i></a>
+            <a href="#"
+              class="btn btn-header-link collapsed  d-flex flex-row justify-content-between align-items-center"
+              data-toggle="collapse" data-target="#faq3" aria-expanded="true" aria-controls="faq3">Want to become Data
+              Science Engineer <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq3" class="collapse mt-2" aria-labelledby="faqhead3" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
               <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
               <h1>Want to become Data Science Engineer</h1>
               <p>Data fascinates all of us but heap of data without useful information is nothing. To bring out meaning
-                information is what the data scientist and data science engineer does. So what are you waiting for?? Join
+                information is what the data scientist and data science engineer does. So what are you waiting for??
+                Join
                 this revolution now. </p>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="card-header" id="faqhead4">
-            <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq4"
-              aria-expanded="true" aria-controls="faq4">Want to become Digital Marketing Expert<i class="fas fa-chevron-right ml-4"></i></a>
+            <a href="#"
+              class="btn btn-header-link collapsed  d-flex flex-row justify-content-between align-items-center"
+              data-toggle="collapse" data-target="#faq4" aria-expanded="true" aria-controls="faq4">Want to become
+              Digital Marketing Expert<i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq4" class="collapse mt-2" aria-labelledby="faqhead4" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
@@ -199,8 +207,10 @@
         </div>
         <div class="card">
           <div class="card-header" id="faqhead5">
-            <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq5"
-              aria-expanded="true" aria-controls="faq5">Want to become Cyber Security Expert <i class="fas fa-chevron-right ml-4"></i></a>
+            <a href="#"
+              class="btn btn-header-link collapsed  d-flex flex-row justify-content-between align-items-center"
+              data-toggle="collapse" data-target="#faq5" aria-expanded="true" aria-controls="faq5">Want to become Cyber
+              Security Expert <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq5" class="collapse mt-2" aria-labelledby="faqhead5" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
@@ -220,29 +230,34 @@
       <ul id="tabs" class="nav nav-tabs" role="tablist">
         <h1>Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
         <li class="nav-item" style="width: 90%;">
-          <a id="tab-A" href="#pane-A" class="nav-link" data-toggle="tab" role="tab">Want
+          <a id="tab-A" href="#pane-A" class="nav-link  d-flex flex-row align-items-center justify-content-between"
+            data-toggle="tab" role="tab">Want
             to become full stack developer in MERN <i class="fas fa-chevron-right ml-5"></i></a>
         </li>
         <li class="nav-item" style="width: 90%;">
-          <a id="tab-B" href="#pane-B" class="nav-link" data-toggle="tab" role="tab">Want to become Product Manager <i
-              class="fas fa-chevron-right ml-5"></i></a>
+          <a id="tab-B" href="#pane-B" class="nav-link  d-flex flex-row align-items-center justify-content-between"
+            data-toggle="tab" role="tab">Want to become Product Manager <i class="fas fa-chevron-right ml-5"></i></a>
         </li>
         <li class="nav-item" style="width: 90%;">
-          <a id="tab-C" href="#pane-C" class="nav-link active" data-toggle="tab" role="tab">Want to become Data Science
+          <a id="tab-C" href="#pane-C"
+            class="nav-link active  d-flex flex-row align-items-center justify-content-between" data-toggle="tab"
+            role="tab">Want to become Data Science
             Engineer <i class="fas fa-chevron-right ml-5"></i></a>
         </li>
         <li class="nav-item" style="width: 90%;">
-          <a id="tab-D" href="#pane-D" class="nav-link" data-toggle="tab" role="tab">Want to become Digital Marketing
+          <a id="tab-D" href="#pane-D" class="nav-link  d-flex flex-row align-items-center justify-content-between"
+            data-toggle="tab" role="tab">Want to become Digital Marketing
             Expert <i class="fas fa-chevron-right ml-5"></i></a>
         </li>
         <li class="nav-item" style="width: 90%;">
-          <a id="tab-E" href="#pane-E" class="nav-link " data-toggle="tab" role="tab">Want to become Cyber Security
-            Expert<i class="fas fa-chevron-right ml-5"></i></a>
+          <a id="tab-E" href="#pane-E" class="nav-link d-flex flex-row align-items-center justify-content-between"
+            data-toggle="tab" role="tab">Want to become Cyber Security
+            Expert<i class="fas fa-chevron-right align-self-end"></i></a>
         </li>
       </ul>
 
       <div id="content" class="tab-content" role="tablist">
-        <div id="pane-A" class="card tab-pane fade " role="tabpanel" aria-labelledby="tab-A">
+        <div id="pane-A" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-A">
           <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
             <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
             <h1>Want to become full stack developer in mern 1</h1>
@@ -412,7 +427,7 @@
         flex-column
         should-main
       ">
-      <h1 class="text-center text-white">
+      <h1 class="text-center text-dark">
         Who is this membership for?
       </h1>
       <div class="row should-inners">
@@ -445,11 +460,11 @@
         </div>
       </div>
       <div class="should-last mt-4 d-flex flex-column justify-content-center align-items-center">
-        <h4 class="font-weight-lighter text-white mb-4">Think it’s a match?</h4>
-        <p class="banner-btn banner-btn-register">
-          Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">299 only</span>
+        <h4 class="font-weight-lighter text-dark mb-4">Think it’s a match?</h4>
+        <p class="banner-btn text-white banner-btn-register" style="background: #FF7070;">
+          Get it for<span class="ml-2 mr-2 text-white font-weight-bolder">299 only</span>
           with
-          <span class="text-dark font-weight-bolder ml-1">3months access</span>
+          <span class="text-white font-weight-bolder ml-1">3months access</span>
         </p>
       </div>
     </div>
@@ -468,7 +483,6 @@
       <div class="owl-img"> <img src="./Images/merc3.png" alt=""></div>
       <div class="owl-img"> <img src="./Images/pizher2.png" alt=""></div>
       <div class="owl-img"><img src="./Images/vovlo2.png" alt=""></div>
-
     </div>
   </section>
 
@@ -566,9 +580,9 @@
           </div>
         </div>
         <p class="banner-btn membership-btn mt-4">
-          Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">99 only</span>
+          Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">299 only</span>
           with
-          <span class="text-dark font-weight-bolder ml-1">4 weeks access</span>
+          <span class="text-dark font-weight-bolder ml-1">3months access</span>
         </p>
       </div>
       <div class="col-md-5 col-12 w-100 h-100 p-0">
@@ -728,24 +742,24 @@
   </div>
 
 
-  <section class=" pt-3 pb-3 d-flex flex-row align-items-center justify-content-between"
-    style="background-color: #FF7070">
+  <section class=" pt-3 pb-3 d-flex flex-row align-items-center justify-content-between" style="background: #FFEBEB;
+    ">
     <img src="./Images/left.png" class="d-lg-flex d-none" alt="">
     <img src="./Images/Polygon 9.png" class="d-lg-none d-md-flex d-sm-flex" alt="">
     <div class="d-flex flex-column align-items-center justify-content-around">
-      <h3 class="text-white text-center">
+      <h3 class="text-center" style="color: #FF7070;">
         “This is not it”
       </h3>
-      <h2 class="text-white mb-4 font-weight-light text-center">
+      <h2 class="text-dark mb-4 font-weight-light text-center">
         Get Certificate for each milestone
       </h2>
       <img src="./Images/Rectangle2.png" class="w-100" alt="">
       <div class="d-flex flex-row align-items-center justify-content-center">
         <img src="./Images/Polygon 7.png" class="mr-2" alt="" />
-        <p class="banner-btn banner-btn-register mt-4">
-          Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">299 only</span>
+        <p class="banner-btn banner-btn-register text-white mt-4" style="background: #FF7070;">
+          Get it for<span class="ml-2 mr-2 text-white font-weight-bolder">299 only</span>
           with
-          <span class="text-dark font-weight-bolder ml-1">3months access</span>
+          <span class="text-white font-weight-bolder ml-1">3months access</span>
         </p>
         <img src="./Images/Polygon 8.png" class="ml-2" alt="" />
       </div>
@@ -1187,7 +1201,7 @@
           dots: false,
         },
         1000: {
-          items: 4,
+          items: 3,
         },
       },
     });
