--- a/index.html
+++ b/index.html
@@ -533,10 +533,10 @@
   </div>
 
 
-  <section class="d-flex flex-row align-items-center justify-content-between" style="background: #FFEBEB;
+  <section class="d-flex pt-4 pb-4 flex-row align-items-center justify-content-between" style="background: #FFEBEB;
     ">
-    <img src="./Images/left.png" class="d-lg-flex d-none" alt="">
-    <img src="./Images/Polygon 9.png" class="d-lg-none d-md-flex d-sm-flex" alt="">
+    <img src="./Images/left.png" style="width:15%" class="d-lg-flex d-none" alt="">
+    <img src="./Images/Polygon 9.png"  style="width:15%" class="d-lg-none d-md-flex d-sm-flex" alt="">
     <div class="d-flex flex-column align-items-center justify-content-around">
       <h3 class="text-center" style="color: #FF7070;">
         “This is not it”
@@ -556,8 +556,8 @@
       </div>
 
     </div>
-    <img src="./Images/Polygon 10.png" class="d-lg-none d-md-flex d-sm-flex" alt="">
-    <img src="./Images/right.png" class="d-lg-flex d-none" alt="">
+    <img src="./Images/Polygon 10.png" style="width:15%" class="d-lg-none d-md-flex d-sm-flex" alt="">
+    <img src="./Images/right.png" style="width:15%" class="d-lg-flex d-none" alt="">
   </section>
 
   <section class="container-fluid mt-5 d-flex flex-column align-items-center justify-content-center">
