--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 </head>
 
 <body>
-  <nav id="navbar1" class="navbar pt-3 pb-3 navbar-expand-md">
-    <div class="container">
+  <nav  class="header-navbar pt-3 pb-3">
+    <div class="header-navbar-inner">
       <img src="./Images/mentorkart3.png" style="width: 100px;" class="" alt="">
     </div>
+    
   </nav>
   <div class="
         mb-5
@@ -48,7 +49,7 @@
             justify-content-around
           ">
         <div>
-          <h1 class="w-100 text-dark banner-inner-main-text" style="font-weight: 500; font-size: 45px;">
+          <h1 class="w-100 text-dark banner-inner-main-text" style="font-weight: 800; font-size: 45px;">
             MentorKart's Premium MemberShip for <span class="span-color">all your Career needs</span>
           </h1>
           <p style="background: #FFE2E2;border-radius: 20px;color: #FF7070; padding: 5px 14px; width:fit-content;"
@@ -90,7 +91,7 @@
 
   <div id="main" class="tab-main-2">
     <div class="container-fluid">
-      <h1 class="mb-5">Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
+      <h1 class=" tab-main-h1">Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
       <div class="accordion" id="faq">
         <div class="card">
           <div class="card-header" id="faqhead1">
@@ -181,7 +182,7 @@
   <section class="container-fluid tab-main-1 justify-content-center align-items-center">
     <div class="tab-inner-main d-flex">
       <ul id="tabs" class="nav nav-tabs" role="tablist">
-        <h1>Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
+        <h1 class="tab-main-h1">Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
         <li class="nav-item" style="width: 90%;">
           <a id="tab-A" href="#pane-A" class="nav-link  d-flex flex-row align-items-center justify-content-between"
             data-toggle="tab" role="tab">Want
@@ -262,7 +263,7 @@
 
     </div>
   </section>
-  <section class="should-outer p-3 mt-5 d-flex justify-content-center align-items-center should-outer-main">
+  <section class="should-outer p-3 mt-5 d-flex justify-content-center align-items-center">
     <div class="
         d-flex
         justify-content-between
@@ -370,7 +371,7 @@
             </div>
           </div>
         </div>
-        <p class="banner-btn membership-btn mt-4">
+        <p class="banner-btn membership-btn text-white mt-4">
           Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">299 only</span>
           with
           <span class="text-dark font-weight-bolder ml-1">3months access</span>
@@ -433,7 +434,7 @@
         container-fluid
         register
       " style="background-color: #ff7070">
-    <h1 class="text-white">
+    <h1 class="text-white font-weight-bolder">
       “Register before Jan 25, 2022 to Unlock bonuses worth ₹5000”
     </h1>
     <div class="d-flex flex-row align-items-center justify-content-center">
@@ -482,40 +483,40 @@
           ">
         <div class="row frame">
           <div class="col-md-6 col-6">
-            <div class="col-md-12">
+            <div class="col-md-12 frame-inner-outer">
               <div class="frame-inner">
                 <img src="./Images/Frame 3.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 1</h3>
-                <p style="line-height: 25px">
+                <p >
                   Attend your favorite job role live session or even you can attend every Live Session- No Restrictions
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-6">
-            <div class="col-md-12">
+            <div class="col-md-12 frame-inner-outer">
               <div class="frame-inner">
                 <img src="./Images/Frame 4.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 3</h3>
-                <p style="line-height: 30px">
+                <p style="">
                   Attend Live Session on Interview Skills
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-6">
-            <div class="col-md-12">
+            <div class="col-md-12 frame-inner-outer">
               <div class="frame-inner">
                 <img src="./Images/Frame 4.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 3</h3>
-                <p style="line-height: 30px">
+                <p >
                   Participate in Mock group discussions to test your skills
                 </p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-6">
-            <div class="col-md-12">
+            <div class="col-md-12 frame-inner-outer">
               <div class="frame-inner">
                 <img src="./Images/Frame 6.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 4</h3>
