--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 </head>
 
 <body>
-  <nav  class="header-navbar pt-3 pb-3">
+  <nav class="header-navbar pt-3 pb-3">
     <div class="header-navbar-inner">
       <img src="./Images/mentorkart3.png" style="width: 100px;" class="" alt="">
     </div>
-    
+
   </nav>
   <div class="
         mb-5
@@ -272,7 +272,7 @@
         should-main
       ">
       <h1 class="text-center text-dark font-weight-bolder">
-        Who is this <br/>membership for?
+        Who is this <br />membership for?
       </h1>
       <div class="row should-inners">
         <div class="col-md-6 col-12 mb-4">
@@ -487,7 +487,7 @@
               <div class="frame-inner">
                 <img src="./Images/Frame 3.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 1</h3>
-                <p >
+                <p>
                   Attend your favorite job role live session or even you can attend every Live Session- No Restrictions
                 </p>
               </div>
@@ -509,7 +509,7 @@
               <div class="frame-inner">
                 <img src="./Images/Frame 4.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 3</h3>
-                <p >
+                <p>
                   Participate in Mock group discussions to test your skills
                 </p>
               </div>
@@ -537,7 +537,7 @@
   <section class="d-flex pt-4 pb-4 flex-row align-items-center justify-content-between" style="background: #FFEBEB;
     ">
     <img src="./Images/left.png" style="width:15%" class="d-lg-flex d-none" alt="">
-    <img src="./Images/Polygon 9.png"  style="width:15%" class="d-lg-none d-md-flex d-sm-flex" alt="">
+    <img src="./Images/Polygon 9.png" style="width:15%" class="d-lg-none d-md-flex d-sm-flex" alt="">
     <div class="d-flex flex-column align-items-center justify-content-around">
       <h3 class="text-center" style="color: #FF7070;">
         “This is not it”
@@ -790,6 +790,287 @@
                 </div>
               </div>
             </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingSeven" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven"
+                    aria-expanded="true" aria-controls="collapseSeven" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Do you offer a discount for Non-profit Organizations or Educational institutes?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseSeven" role="tabpanel" aria-labelledby="headingSeven">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingEight" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight"
+                    aria-expanded="true" aria-controls="collapseEight" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Do you offer a discount for Non-profit Organizations or Educational institutes?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseEight" role="tabpanel" aria-labelledby="headingEight">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingNine" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine"
+                    aria-expanded="true" aria-controls="collapseNine" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Do you offer a discount for Non-profit Organizations or Educational institutes?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseNine" role="tabpanel" aria-labelledby="headingNine">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingTen" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTen"
+                    aria-expanded="true" aria-controls="collapseTen" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Do you offer a discount for Non-profit Organizations or Educational institutes?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseTen" role="tabpanel" aria-labelledby="headingTen">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingEleven" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven"
+                    aria-expanded="true" aria-controls="collapseEleven" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>My team wants to cance it is subscription, can we get a refund</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseEleven" role="tabpanel"
+                aria-labelledby="headingEleven">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingTwelve" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve"
+                    aria-expanded="true" aria-controls="collapseTwelve" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Can I cancel my essential or premium plan at any time?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseTwelve" role="tabpanel"
+                aria-labelledby="headingTwelve">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingThirteen" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen"
+                    aria-expanded="true" aria-controls="collapseThirteen" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Can I cancel my essential or premium plan at any time?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseThirteen" role="tabpanel"
+                aria-labelledby="headingThirteen">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingFourteen" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen"
+                    aria-expanded="true" aria-controls="collapseFourteen" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Can I cancel my essential or premium plan at any time?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseFourteen" role="tabpanel"
+                aria-labelledby="headingFourteen">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingFifteen" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen"
+                    aria-expanded="true" aria-controls="collapseFifteen" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Can I cancel my essential or premium plan at any time?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseFifteen" role="tabpanel"
+                aria-labelledby="headingFifteen">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="panel panel-default">
+              <div class="panel-heading" id="headingSixteen" role="tab">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSixteen"
+                    aria-expanded="true" aria-controls="collapseSixteen" class="
+                    d-flex
+                    w-100
+                    flex-row
+                    justify-content-between
+                    align-items-center
+                  "><span>Can I cancel my essential or premium plan at any time?</span><i
+                      class="pull-right fa fa-plus"></i></a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse in" id="collapseSixteen" role="tabpanel"
+                aria-labelledby="headingSixteen">
+                <div class="panel-body">
+                  <p>
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life
+                    accusamus terry richardson ad squid. 3 wolf moon officia aute,
+                    non cupidatat skateboard dolor brunch. Food truck quinoa
+                    nesciunt laborum eiusmod.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
           </div>
         </div>
       </div>
